--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -35,119 +35,119 @@
         <div id='fed' class='toggle-hide list-group-item'>
           <div class="media">
             <a class="pull-left" href="http://www.noaa.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/noaa.png')}}" alt="NOAA">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/noaa.png')}}" alt="NOAA">
             </a>
             <div class="media-body">
               <h3>National Oceanic and Atmospheric Administration (NOAA)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.nsf.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/nsf.png')}}" alt="NSF">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/nsf.png')}}" alt="NSF">
             </a>
             <div class="media-body">
               <h3>National Science Foundation (NSF)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.nasa.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/nasa.png')}}" alt="NASA">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/nasa_logo.png')}}" alt="NASA">
             </a>
             <div class="media-body">
               <h3>National Aeronautics and Space Administration (NASA)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.epa.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/epa.png')}}" alt="EPA">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/epa.png')}}" alt="EPA">
             </a>
             <div class="media-body">
               <h3>Environmental Protection Agency (EPA)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.boemre.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/boemre.png')}}" alt="BOEM">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/BOEM-COLOR.png')}}" alt="BOEM">
             </a>
             <div class="media-body">
               <h3>Bureau of Ocean Energy Management, Regulation and Enforcement  (BOEM and BSEE)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://mmc.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/mmc.png')}}" alt="MMC">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/mmc.png')}}" alt="MMC">
             </a>
             <div class="media-body">
               <h3>Marine Mammal Commission (MMC)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.onr.navy.mil/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/onr.png')}}" alt="ONR">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/onr.png')}}" alt="ONR">
             </a>
             <div class="media-body">
               <h3>Office of Naval Research (ONR)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.jcs.mil/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/jcs.png')}}" alt="JCS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/Oceanographer_of_the_Navy_-_U.S._(seal).gif')}}" alt="JCS">
             </a>
             <div class="media-body">
               <h3>Oceanographer of the Navy, representing the Joint Chiefs of Staff (JCS)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.usace.army.mil/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/usace.png')}}" alt="USACE">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/usace.png')}}" alt="USACE">
             </a>
             <div class="media-body">
               <h3>U.S. Army Corps of Engineers (USACE)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.uscg.mil/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/uscg.png')}}" alt="USCG">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/uscg.png')}}" alt="USCG">
             </a>
             <div class="media-body">
               <h3>U.S. Coast Guard (USCG)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.usgs.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/usgs.png')}}" alt="USGS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/usgs.png')}}" alt="USGS">
             </a>
             <div class="media-body">
               <h3>U.S. Geological Survey (USGS)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.csrees.usda.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/csrees.png')}}" alt="CSREES">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/csrees.png')}}" alt="CSREES">
             </a>
             <div class="media-body">
               <h3>Department of Agriculture, Cooperative State Research, Education, and Extension Service (CSREES)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.energy.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/doe.png')}}" alt="DOE">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/doe.png')}}" alt="DOE">
             </a>
             <div class="media-body">
               <h3>Department of Energy (DOE)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.state.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/dos.png')}}" alt="DOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/dos.png')}}" alt="DOS">
             </a>
             <div class="media-body">
               <h3>Department of State (DOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.dot.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/dot.png')}}" alt="DOT">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/dot.png')}}" alt="DOT">
             </a>
             <div class="media-body">
               <h3>Department of Transportation (DOT)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.fda.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/fda.png')}}" alt="FDA">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/fda.png')}}" alt="FDA">
             </a>
             <div class="media-body">
               <h3>Food and Drug Administration (FDA)</h3>
               <br>
             </div>
             <a class="pull-left" href="http://www.arctic.gov/">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/usarc.png')}}" alt="USARC">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/usarc.png')}}" alt="USARC">
             </a>
             <div class="media-body">
               <h3>U.S. Arctic Research Commision</h3>
@@ -165,77 +165,77 @@
         <div id='reg' class='list-group-item toggle-hide'>
           <div class="media">
             <a class="pull-left" href="{{url_for('show_ra', provider='AOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/blank.png')}}" alt="AOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/blank.png')}}" alt="AOOS">
             </a>
             <div class="media-body">
               <h3>Alaska Ocean Observing System (AOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='CARICOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/caricoos.png')}}" alt="CARICOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/caricoos.png')}}" alt="CARICOOS">
             </a>
             <div class="media-body">
               <h3>Caribbean Coastal Ocean Observing System (CARICOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='CeNCOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/cencoos.png')}}" alt="CeNCOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/cencoos.png')}}" alt="CeNCOOS">
             </a>
             <div class="media-body">
               <h3>The Central and Northern California Ocean Observing System (CeNCOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='GCOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/gcoos.png')}}" alt="GCOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/gcoos.png')}}" alt="GCOOS">
             </a>
             <div class="media-body">
               <h3>Gulf of Mexico Ocean Observing System (GCOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='GLOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/glos.png')}}" alt="GLOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/glos.png')}}" alt="GLOS">
             </a>
             <div class="media-body">
               <h3>Great Lakes Observing System (GLOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='MARACOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/maracoos.png')}}" alt="MARACOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/maracoos.png')}}" alt="MARACOOS">
             </a>
             <div class="media-body">
               <h3>Mid-Atlantic Regional Association Coastal Ocean Observing System (MARACOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='NANOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/nanoos.png')}}" alt="NANOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/nanoos.png')}}" alt="NANOOS">
             </a>
             <div class="media-body">
               <h3>Northwest Association of Networked Ocean Observing Systems</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='NERACOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/neracoos.png')}}" alt="NERACOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/neracoos.png')}}" alt="NERACOOS">
             </a>
             <div class="media-body">
               <h3>Northeastern Regional Association of Coastal and Ocean Observing Systems (NERACOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='PacIOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/pacioos.png')}}" alt="PACIOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/pacioos.png')}}" alt="PACIOOS">
             </a>
             <div class="media-body">
               <h3>Pacific Islands Ocean Observing System (PacIOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='SCCOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/sccoos.png')}}" alt="SCCOOS">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/sccoos.png')}}" alt="SCCOOS">
             </a>
             <div class="media-body">
               <h3>Southern California Coastal Ocean Observing System (SCCOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='SECOORA')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/secoora.png')}}" alt="SECOORA">
+              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/secoora.png')}}" alt="SECOORA">
             </a>
             <div class="media-body">
               <h3>Southeast Coastal Ocean Observing Regional Association (SECOORA)</h3>
