--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -46,7 +46,7 @@
     <div id="btn-ico" class="item item-smaller">
       <div class="overlay overlay-sq">
         <a href="{{url_for('by_the_numbers')}}">
-          IOOS By The Numbers
+          By The Numbers
         </a>
       </div>
     </div>
