Updates regional and federal platforms text

--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -290,8 +290,12 @@
         </a>
         <div id='regional' class='list-group-item toggle-hide'>
           <p>
-            The numbers for the regional and national platforms come from several presentations on the 
-            <a href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
+            The number of regional platforms was extracted from several recent
+            presentations on the IOOS Communications and Presentations Landing
+            Page.
+            <p>
+              <a href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
+            </p>
           </p>
         </div>
         <!-- -->
@@ -303,8 +307,12 @@
         </a>
         <div id='national' class='list-group-item toggle-hide'>
           <p>
-            The numbers for the regional and national platforms come from several presentations on the 
-            <a href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
+            The number of federal platforms was extracted from several recent
+            presentations on the IOOS Communications and Presentations Landing
+            Page.
+            <p>
+              <a href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
+            </p>
           </p>
         </div>
         <!-- -->
