Image resize and opens new tab for img clicks

--- a/ioos_catalog/static/css/by_the_numbers.css
+++ b/ioos_catalog/static/css/by_the_numbers.css
@@ -40,7 +40,10 @@
     color: #838383;
 }
 
-img.maxwidth-logo {
+img.logo {
+    height: 64px;
+    width: 64px;
+    max-height: 64px;
     max-width: 64px;
 }
 
