--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -34,8 +34,8 @@
         </a>
         <div id='fed' class='toggle-hide list-group-item'>
           <div class="media">
-            <a class="pull-left" href="http://www.noaa.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/noaa.png')}}" alt="NOAA">
+            <a target="_blank" class="pull-left" href="http://www.noaa.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/noaa.png')}}" alt="NOAA">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://noaa.gov/">
@@ -43,8 +43,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.nsf.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/nsf.png')}}" alt="NSF">
+            <a target="_blank" class="pull-left" href="http://www.nsf.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/nsf.png')}}" alt="NSF">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.nsf.gov/">
@@ -52,8 +52,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.nasa.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/nasa_logo.png')}}" alt="NASA">
+            <a target="_blank" class="pull-left" href="http://www.nasa.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/nasa.png')}}" alt="NASA">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.nasa.gov/">
@@ -61,8 +61,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.epa.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/epa.png')}}" alt="EPA">
+            <a target="_blank" class="pull-left" href="http://www.epa.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/epa.png')}}" alt="EPA">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.epa.gov/">
@@ -70,8 +70,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.boemre.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/BOEM-COLOR.png')}}" alt="BOEM">
+            <a target="_blank" class="pull-left" href="http://www.boemre.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/boem.png')}}" alt="BOEM">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.boemre.gov/">
@@ -79,8 +79,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://mmc.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/mmc.png')}}" alt="MMC">
+            <a target="_blank" class="pull-left" href="http://mmc.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/mmc.png')}}" alt="MMC">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://mmc.gov/">
@@ -88,8 +88,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.onr.navy.mil/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/onr.png')}}" alt="ONR">
+            <a target="_blank" class="pull-left" href="http://www.onr.navy.mil/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/onr.png')}}" alt="ONR">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.onr.navy.mil/">
@@ -97,8 +97,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.jcs.mil/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/Oceanographer_of_the_Navy_-_U.S._(seal).gif')}}" alt="JCS">
+            <a target="_blank" class="pull-left" href="http://www.jcs.mil/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/jcs.png')}}" alt="JCS">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.jcs.mil/">
@@ -106,8 +106,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.usace.army.mil/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/usace.png')}}" alt="USACE">
+            <a target="_blank" class="pull-left" href="http://www.usace.army.mil/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/usace.png')}}" alt="USACE">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.usace.army.mil/">
@@ -115,8 +115,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.uscg.mil/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/uscg.png')}}" alt="USCG">
+            <a target="_blank" class="pull-left" href="http://www.uscg.mil/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/uscg.png')}}" alt="USCG">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.uscg.mil/">
@@ -124,8 +124,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.usgs.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/usgs.png')}}" alt="USGS">
+            <a target="_blank" class="pull-left" href="http://www.usgs.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/usgs.png')}}" alt="USGS">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.usgs.gov/">
@@ -133,8 +133,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.csrees.usda.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/csrees.png')}}" alt="CSREES">
+            <a target="_blank" class="pull-left" href="http://www.csrees.usda.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/csrees.png')}}" alt="CSREES">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.csrees.usda.gov/">
@@ -142,8 +142,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.energy.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/doe.png')}}" alt="DOE">
+            <a target="_blank" class="pull-left" href="http://www.energy.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/doe.png')}}" alt="DOE">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.energy.gov/">
@@ -151,8 +151,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.state.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/dos.png')}}" alt="DOS">
+            <a target="_blank" class="pull-left" href="http://www.state.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/dos.png')}}" alt="DOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.state.gov/">
@@ -160,8 +160,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.dot.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/dot.png')}}" alt="DOT">
+            <a target="_blank" class="pull-left" href="http://www.dot.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/dot.png')}}" alt="DOT">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.dot.gov/">
@@ -169,8 +169,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.fda.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/fda.png')}}" alt="FDA">
+            <a target="_blank" class="pull-left" href="http://www.fda.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/fda.png')}}" alt="FDA">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.fda.gov/">
@@ -178,8 +178,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="http://www.arctic.gov/">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/usarc.png')}}" alt="USARC">
+            <a target="_blank" class="pull-left" href="http://www.arctic.gov/">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/usarc.png')}}" alt="USARC">
             </a>
             <div class="media-body">
               <a target="_blank" href="http://www.arctic.gov/">
@@ -198,8 +198,8 @@
         </a>
         <div id='reg' class='list-group-item toggle-hide'>
           <div class="media">
-            <a class="pull-left" href="{{url_for('show_ra', provider='AOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/blank.png')}}" alt="AOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='AOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/blank.png')}}" alt="AOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='AOOS')}}">
@@ -207,8 +207,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='CARICOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/caricoos.png')}}" alt="CARICOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='CARICOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/caricoos.png')}}" alt="CARICOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='CARICOOS')}}">
@@ -216,8 +216,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='CeNCOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/cencoos.png')}}" alt="CeNCOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='CeNCOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/cencoos.png')}}" alt="CeNCOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='CeNCOOS')}}">
@@ -225,8 +225,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='GCOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/gcoos.png')}}" alt="GCOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='GCOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/gcoos.png')}}" alt="GCOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='GCOOS')}}">
@@ -234,8 +234,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='GLOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/glos.png')}}" alt="GLOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='GLOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/glos.png')}}" alt="GLOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='GLOS')}}">
@@ -243,8 +243,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='MARACOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/maracoos.png')}}" alt="MARACOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='MARACOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/maracoos.png')}}" alt="MARACOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='MARACOOS')}}">
@@ -252,8 +252,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='NANOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/nanoos.png')}}" alt="NANOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='NANOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/nanoos.png')}}" alt="NANOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='NANOOS')}}">
@@ -261,8 +261,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='NERACOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/neracoos.png')}}" alt="NERACOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='NERACOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/neracoos.png')}}" alt="NERACOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='NERACOOS')}}">
@@ -270,8 +270,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='PacIOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/pacioos.png')}}" alt="PACIOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='PacIOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/pacioos.png')}}" alt="PACIOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='PacIOOS')}}">
@@ -279,8 +279,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='SCCOOS')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/sccoos.png')}}" alt="SCCOOS">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='SCCOOS')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/sccoos.png')}}" alt="SCCOOS">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='SCCOOS')}}">
@@ -288,8 +288,8 @@
               </a>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='SECOORA')}}">
-              <img class="media-object maxwidth-logo" src="{{url_for('static', filename='img/logos/secoora.png')}}" alt="SECOORA">
+            <a target="_blank" class="pull-left" href="{{url_for('show_ra', provider='SECOORA')}}">
+              <img class="media-object logo" src="{{url_for('static', filename='img/logos/secoora.png')}}" alt="SECOORA">
             </a>
             <div class="media-body">
               <a target="_blank" href="{{url_for('show_ra', provider='SECOORA')}}">
