Updated by the numbers text
Implements #288

--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -320,31 +320,18 @@
           <h4>IOOS</h4>
         </a>
       </div>
-    </div>
+    </div> 
     <div class="col-md-4 about-btn">
       <h2>About IOOS by the Numbers</h2>
-      <p>
-        These data were obtained from multiple sources on 9/16/2014. Each
-        source is identified on the left with a link to the original source.
-        The federal partners and regional associations are public information
-        and each association can be found on the left under the federal and
-        regional tabs.  At the time of collection, there were five QARTOD
-        manuals in-place for IOOS, which describe a comprehensive method for
-        QA/QC of oceanographpic data.  The number of datasets available on the
-        IOOS catalog are available on the 
-        <a href="{{url_for('inventory')}}">Catalog Inventory</a>. 
-        The number of glider days is as of 2013. More information about gliders
-        may be found on 
-        <a href="{{url_for('gliders')}}">our gliders page</a>.
-        Our services number is available on our 
-        <a href="{{url_for('inventory')}}">Catalog Inventory</a>
-        , a service describes an endpoint where clients may obtain either data
-        or metadata about oceanographic datasets.
-        The number of servers was calculated by totaling the number of
-        top-level-domains available for each partner and association for IOOS. 
-        The number of platforms is from public information available on the
-        IOOS homepage. 
-        
+      <p>These data were obtained from multiple sources in September 2014.
+        The original source for each value is identified on the left.
+        Links to each federal partner or regional association are provided.
+      </p>
+
+      <p>At the time of data collection, there were five QARTOD manuals in-place for IOOS. These manuals establish authoritative QA/QC procedures for oceanographic data. The number of datasets and services available from IOOS changes constantly. The exact number of each at any given time is provided on the <a href="{{url_for('inventory')}}">Catalog Inventory page</a>.
+     </p>
+
+     <p>The number of servers was calculated by totaling the number of top-level-domains available for each partner and association for IOOS. The number of glider days was obtained from the regional glider operations summary for 2008 to 2012. More information about gliders may be found on <a href="{{url_for('gliders')}}">our gliders page</a>. The numbers of national and regional platforms were obtained from public information available on the IOOS homepage.
       </p>
     </div>
   </div>
